# VectorChord

./: .backup_path  .deps_hash  .gitignore  .target_version  BUILDER_WORKFLOW.md  BUILD_OPTIMIZATION_SUMMARY.md  Cargo.toml  Makefile  SCRIPTS_REFACTORING_SUMMARY.md  build.rs  vchord.control
.cursor/rules/: global.mdc
crates/simd/: build.rs
crates/vchordrq/: Cargo.toml
crates/vchordrq/src/: search.rs  tuples.rs
docker/: Dockerfile.build  README.md
scripts/: README.md  app.sh  build_builder_image.sh  build_clean.sh  build_incremental.sh  install_extension.sh  rebuild_indices.sh
sql/upgrade/: vchord--0.5.0--0.5.1.sql  vchord--0.5.1--0.5.2.sql  vchord--0.5.13--0.5.14.sql  vchord--0.5.13--0.5.15.sql  vchord--0.5.15--0.5.16.sql  vchord--0.5.15--0.5.17.sql  vchord--0.5.17--0.5.18.sql  vchord--0.5.18--0.5.19.sql  vchord--0.5.18--0.5.20.sql  vchord--0.5.2--0.5.3.sql  vchord--0.5.20--0.5.21.sql  vchord--0.5.20--0.5.22.sql  vchord--0.5.22--0.5.23.sql  vchord--0.5.22--0.5.24.sql  vchord--0.5.24--0.5.25.sql  vchord--0.5.25--0.5.26.sql  vchord--0.5.26--0.5.27.sql  vchord--0.5.27--0.5.28.sql  vchord--0.5.28--0.5.29.sql  vchord--0.5.29--0.5.30.sql  vchord--0.5.3--0.5.4.sql  vchord--0.5.30--0.5.31.sql  vchord--0.5.30--0.5.32.sql  vchord--0.5.32--0.5.33.sql  vchord--0.5.33--0.5.34.sql  vchord--0.5.34--0.5.35.sql  vchord--0.5.35--0.5.36.sql  vchord--0.5.36--0.5.37.sql  vchord--0.5.36--0.5.38.sql  vchord--0.5.38--0.5.39.sql  vchord--0.5.38--0.5.40.sql  vchord--0.5.4--0.5.5.sql  vchord--0.5.40--0.5.41.sql  vchord--0.5.41--0.5.42.sql  vchord--0.5.42--0.5.43.sql  (+37 more)
(+7 files in other folders)
